OpponentProbabilities fixed to accept tiles, fixed wrong code.